--- a/css/index.css
+++ b/css/index.css
@@ -4,15 +4,266 @@
   font-family: "Gilroy";
 
   src: local("Gilroy Light"), local("Gilroy-Light"),
-  url("Gilroylight.woff2") format("woff2"),
-  url("Gilroylight.woff") format("woff");
+  url("../fonts/Gilroylight.woff2") format("woff2"),
+  url("../fonts/Gilroylight.woff") format("woff");
 }
+
 @font-face {
   font-style: normal;
   font-weight: 800;
   font-family: "Gilroy";
 
   src: local("Gilroy ExtraBold"), local("Gilroy-ExtraBold"),
-  url("Gilroyextrabold.woff2") format("woff2"),
-  url("Gilroyextrabold.woff") format("woff");
+  url("../fonts/Gilroyextrabold.woff2") format("woff2"),
+  url("../fonts/Gilroyextrabold.woff") format("woff");
+}
+
+body {
+  margin: 0;
+
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 30px;
+  font-family: "Open Sans", Arial, sans-serif;
+  color: rgb(0, 0, 0);
+
+  background-color: rgb(255, 255, 255);
+}
+
+a {
+  text-decoration: none;
+}
+
+.button {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy", Arial, sans-serif;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+
+  background-color: rgb(240, 197, 46);
+  border: none;
+}
+
+.button:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.services-button:active {
+  color: rgb(247, 225, 132);
+
+  background-color: rgb(0, 0, 0);
+}
+
+.search-form input {
+  font: inherit;
+
+  border: 2px solid transparent;
+  opacity: 0.3;
+}
+
+.search-form input:hover {
+  opacity: 0.6;
+}
+
+.search-form input:focus {
+  border-bottom: 2px solid rgb(0, 0, 0);
+  opacity: 1;
+}
+
+.search-form-button {
+  font: inherit;
+
+  background-color: transparent;
+  border: 2px solid rgb(0, 0, 0);
+}
+
+.search-form-button:hover {
+  color: rgb(255, 255, 255);
+
+  background-color: rgb(0, 0, 0);
+}
+
+.search-form-button:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.site-navigation {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy", Arial, sans-serif;
+  text-transform: uppercase;
+}
+
+.site-navigation-catalog {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 36px;
+  font-family: "Open Sans", Arial, sans-serif;
+  text-transform: initial;
+}
+
+.site-navigation,
+.site-navigation-catalog-group {
+  list-style: none;
+}
+
+.user-navigation a,
+.goods-navigation a,
+.site-navigation a {
+  color: rgb(0, 0, 0);
+}
+
+.user-navigation a:hover,
+.goods-navigation a:hover,
+.site-navigation a:hover {
+  opacity: 0.6;
+}
+
+.user-navigation a:active,
+.goods-navigation a:active,
+.site-navigation a:active {
+  opacity: 0.3;
+}
+
+.carousel-list {
+  list-style: none;
+}
+
+.carousel-list b {
+  font-weight: 800;
+  font-size: 47px;
+  line-height: 56px;
+  font-family: "Gilroy";
+}
+
+.carousel-parameters td {
+  font-weight: 300;
+  font-size: 36px;
+  line-height: 48px;
+  font-family: "Gilroy";
+}
+
+.carousel-parameters th {
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 20px;
+}
+
+.carousel-controls {
+  list-style: none;
+}
+
+.categories-list {
+  list-style: none;
+}
+
+.categories-list a {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy";
+  color: rgb(0, 0, 0);
+
+  background-color: rgb(255, 255, 255);
+}
+
+.services-control,
+.services-list {
+  list-style: none;
+}
+
+.services-list h3 {
+  font-weight: 800;
+  font-size: 47px;
+  line-height: 48px;
+  font-family: "Gilroy";
+}
+
+.brands ul {
+  list-style: none;
+}
+
+.about h2 {
+  font-weight: 800;
+  font-size: 47px;
+  line-height: 48px;
+  font-family: "Gilroy";
+}
+
+.about ul {
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 40px;
+  font-family: "Gilroy";
+}
+
+.contacts h2 {
+  font-weight: 800;
+  font-size: 47px;
+  line-height: 48px;
+  font-family: "Gilroy";
+}
+
+.main-footer {
+  color: rgb(255, 255, 255);
+
+  background-color: rgb(70, 70, 70);
+}
+
+.social-list {
+  list-style: none;
+}
+
+.main-footer address {
+  font-style: normal;
+}
+
+.main-footer a {
+  color: rgb(255, 255, 255);
+}
+
+.contacts label {
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  font-family: "Gilroy";
+}
+
+.contacts input,
+.contacts textarea {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  font-family: "Open Sans", Arial, sans-serif;
+  color: rgba(70, 70, 70, 0.4);
+
+  background-color: rgb(242, 242, 242);
+  border: 3px solid transparent;
+  outline: none;
+}
+
+.contacts input:hover,
+.contacts textarea:hover {
+  background-color: rgb(234, 234, 234);
+}
+
+.contacts input:focus,
+.contacts textarea:focus {
+  color: rgba(70, 70, 70, 1);
+
+  background-color: rgb(255, 255, 255);
+  border-color: rgb(247, 226, 150);
+}
+
+.contacts input:invalid,
+.contacts textarea:invalid {
+  background-color: rgb(246, 218, 218);
+}
+
+.map {
+  display: none;
 }
