--- a/css/index.css
+++ b/css/index.css
@@ -4,8 +4,8 @@
   font-family: "Gilroy";
 
   src: local("Gilroy Light"), local("Gilroy-Light"),
-  url("../fonts/Gilroylight.woff2") format("woff2"),
-  url("../fonts/Gilroylight.woff") format("woff");
+  url("../fonts/gilroylight.woff2") format("woff2"),
+  url("../fonts/gilroylight.woff") format("woff");
 }
 
 @font-face {
@@ -14,8 +14,8 @@
   font-family: "Gilroy";
 
   src: local("Gilroy ExtraBold"), local("Gilroy-ExtraBold"),
-  url("../fonts/Gilroyextrabold.woff2") format("woff2"),
-  url("../fonts/Gilroyextrabold.woff") format("woff");
+  url("../fonts/gilroyextrabold.woff2") format("woff2"),
+  url("../fonts/gilroyextrabold.woff") format("woff");
 }
 
 @font-face {
