--- a/css/index.css
+++ b/css/index.css
@@ -49,24 +49,71 @@ body {
   background-color: rgb(255, 255, 255);
 }
 
+/*body > * {
+  background-color: rgba(0, 255, 0, 0.3);
+}
+
+body > * > * {
+  background-color: rgba(0, 60, 255, 0.3);
+}
+
+body > * > * > * {
+  background-color: rgba(253, 25, 0, 0.3);
+}
+
+body > * > * > * > * {
+  background-color: rgba(255, 0, 234, 0.3);
+}
+
+body > * > * > * > * > * {
+  background-color: rgba(18, 65, 62, 0.3);
+}*/
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+
+  white-space: nowrap;
+
+  border: 0;
+
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
+
 .container {
   width: 1160px;
   margin: 0 auto;
   padding: 0 20px;
 }
 
-a {
-  text-decoration: none;
-}
-
 .button {
+  padding: 0 40px;
+
   font-weight: 800;
   font-size: 18px;
-  line-height: 24px;
+  line-height: 40px;
   font-family: "Gilroy", Arial, sans-serif;
   text-align: center;
   color: rgb(0, 0, 0);
   text-transform: uppercase;
+  letter-spacing: 4px;
 
   background-color: rgb(240, 197, 46);
   border: none;
@@ -81,6 +128,22 @@ a {
   padding: 0 60px;
 
   background-color: rgb(247, 226, 150);
+}
+
+.navigation-main {
+  padding-top: 32px;
+  padding-bottom: 163px;
+}
+
+.header-main-logo {
+  position: relative;
+
+  display: block;
+}
+
+.header-main-logo img {
+  position: absolute;
+  top: -52px;
 }
 
 .header-main-logo:hover {
@@ -99,18 +162,47 @@ a {
 
 .navigation-wrapper {
   display: flex;
-  margin-bottom: 44px;
+  align-items: center;
+  margin-bottom: 28px;
 }
 
 .search-wrapper {
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+}
+
+.search-form {
+  position: relative;
+
+  display: flex;
   width: 440px;
   margin-right: 100px;
 }
 
+.search-form::before {
+  content: "";
+  position: absolute;
+  top: 19px;
+  left: 3px;
+
+  width: 16px;
+  height: 16px;
+
+  background: url("../img/icon-search.svg") no-repeat;
+}
+
 .search-form input {
+  position: relative;
+
+  width: 357px;
+  padding: 8px 0 8px 37px;
+
   font: inherit;
 
+  background-color: transparent;
   border: 2px solid transparent;
+  border-bottom: 2px solid transparent;
   opacity: 0.3;
 }
 
@@ -120,10 +212,20 @@ a {
 
 .search-form input:focus {
   border-bottom: 2px solid rgb(0, 0, 0);
+  outline: none;
   opacity: 1;
 }
 
+.search-form input:focus ~ .search-form-button {
+  display: block;
+}
+
 .search-form-button {
+  display: none;
+  width: 85px;
+  height: 49px;
+  margin-left: -2px;
+
   font: inherit;
 
   background-color: transparent;
@@ -145,7 +247,7 @@ a {
 }
 
 .basket {
-  margin-left: 65px;
+  margin-left: 61px;
 }
 
 .site-navigation {
@@ -154,6 +256,7 @@ a {
   margin: 0;
   padding: 0;
 
+  list-style: none;
   font-weight: 800;
   font-size: 18px;
   line-height: 24px;
@@ -162,21 +265,57 @@ a {
   letter-spacing: 0.2em;
 }
 
-.site-navigation > li:first-child {
+.site-navigation__item:first-child {
+  position: relative;
+
   width: 50%;
   margin-right: 20px;
 } 
 
-.site-navigation > li:nth-child(2) {
-  margin-right: 38px;
+.site-navigation__item:first-child a {
+  position: relative;
 } 
 
-.site-navigation > li:last-child {
+.site-navigation__item:first-child > a::after {
+  content: "";
+  position: absolute;
+  top: 3px;
+  right: -28px;
+
+  width: 16px;
+  height: 16px;
+
+  background: url("../img/catalog-plus.svg") no-repeat;
+  opacity: 0.3;
+} 
+
+.site-navigation__item:nth-child(2) {
+  margin-right: 35px;
+} 
+
+.site-navigation__item:last-child {
+  margin-right: -3px;
   margin-left: auto;
 }
 
+.site-navigation__item a:hover ~ .site-navigation-catalog {
+  display: flex;
+}
+
+.site-navigation-catalog:hover {
+  display: flex;
+}
+
 .site-navigation-catalog {
+  position: absolute;
+  z-index: 2;
+
   display: none;
+  box-sizing: border-box;
+  width: calc(200% + 120px);
+  height: 163px;
+  margin: 0 -60px;
+  padding: 22px 60px 0 60px;
 
   font-weight: 300;
   font-size: 15px;
@@ -184,26 +323,61 @@ a {
   font-family: "Open Sans", Arial, sans-serif;
   text-transform: initial;
   letter-spacing: normal;
+
+  background-color: rgb(247, 226, 150);
 }
 
-.site-navigation,
 .site-navigation-catalog-group {
+  padding: 0;
+
   list-style: none;
 }
 
+.site-navigation-catalog-group:not(:last-child) {
+  margin-right: 40px;
+}
+
 .user-navigation {
-  margin-left: 28px;
+  position: relative;
+
+  margin-left: 27px;
+}
+
+.user-navigation svg {
+  position: absolute;
+  top: 10px;
+  left: -27px;
+}
+
+.goods-navigation {
+  position: relative;
+}
+
+.compare svg {
+  position: absolute;
+  top: 12px;
+  left: -21px;
+}
+
+.basket svg {
+  position: absolute;
+  top: 10px;
+  right: 71px;
 }
 
 .user-navigation a,
 .goods-navigation a,
 .site-navigation a {
+  vertical-align: middle;
   color: rgb(0, 0, 0);
 }
 
 .user-navigation a:hover,
 .goods-navigation a:hover,
 .site-navigation a:hover {
+  opacity: 0.6;
+}
+.compare:hover ~ .compare-icon {
   opacity: 0.6;
 }
 
@@ -213,31 +387,110 @@ a {
   opacity: 0.3;
 }
 
+.carousel-products {
+  position: relative;
+
+  margin-bottom: -14px;
+}
+
 .carousel-list {
+  position: relative;
+  top: -110px;
+
+  margin: 0;
   padding: 0;
 
   list-style: none;
 }
 
+.carousel-list-item {
+  display: none;
+  flex-direction: row;
+  justify-content: center;
+  margin: 0 60px;
+}
+
+.carousel-list-item--current {
+  display: flex;
+}
+
+.carousel-list-item:nth-child(1)::before,
+.carousel-list-item:nth-child(3)::before,
+.carousel-list-item:nth-child(4)::before {
+  content: "";
+  position: absolute;
+  top: 36px;
+  right: 460px;
+
+  width: 100px;
+  height: 7px;
+
+  background-color: rgb(255, 255, 255);
+}
+
+.carousel-list-item:nth-child(1)::after,
+.carousel-list-item:nth-child(2)::after,
+.carousel-list-item:nth-child(3)::after {
+  content: "";
+  position: absolute;
+  top: 63px;
+  right: 46px;
+
+  font-weight: 800;
+  font-size: 172px;
+  font-family: "Gilroy", Arial, sans-serif;
+  color: rgb(255, 255, 255);
+  letter-spacing: 4px;
+}
+
+.carousel-list-item:nth-child(1)::after {
+  content: "01";
+}
+
+.carousel-list-item:nth-child(2)::after {
+  content: "02";
+}
+
+.carousel-list-item:nth-child(3)::after {
+  content: "03";
+}
+
 .carousel-list-image-wrapper {
-  width: 580px;
+  width: 520px;
+  margin-right: 40px;
+
+  text-align: center;
+}
+.carousel-list-image-wrapper img {
+  margin-left: -52px;
 }
 
 .carousel-list-text-wrapper {
+  position: relative;
+  z-index: 1;
+
   display: flex;
   flex-direction: column;
-  width: 500px;
-  margin: 0 60px 0 20px;
+  box-sizing: border-box;
+  width: 520px;
+  padding-top: 79px;
 }
 
-.carousel-list li {
-  display: flex;
-  flex-direction: row;
+.carousel-list-text-wrapper p {
+  margin-top: 20px;
+  margin-bottom: 44px;
+} 
+
+.carousel-list-text-wrapper .button {
+  order: 1;
+  align-self: flex-start;
+  margin-bottom: 47px;
 }
 
-.carousel-list li:not(:first-child) {
-  display: none;
+.carousel-list-text-wrapper table {
+  order: 2;
 }
+
 
 .carousel-list b {
   font-weight: 800;
@@ -250,6 +503,21 @@ a {
   color: rgb(70, 70, 70);
 }
 
+.carousel-parameters {
+  border-collapse: collapse;
+}
+
+.carousel-parameters td:nth-child(1),
+.carousel-parameters td:nth-child(3) {
+  width: 120px;
+  padding: 0;
+}
+
+.carousel-parameters td:nth-child(2) {
+  width: 105px;
+  padding: 0;
+}
+
 .carousel-parameters td {
   font-weight: 300;
   font-size: 36px;
@@ -260,11 +528,16 @@ a {
 .carousel-parameters th {
   font-weight: 300;
   font-size: 13px;
-  line-height: 20px;
+  line-height: 36px;
   color: rgb(70, 70, 70);
 }
 
 .carousel-controls {
+  position: absolute;
+  top: 214px;
+  right: 80px;
+
+  margin: 0;
   padding: 0;
 
   list-style: none;
@@ -805,4 +1078,74 @@ a {
 .catalog-pagination-back:active a,
 .catalog-pagination-next:active a {
   color: rgba(0, 0, 0, 0.3);
+}
+
+.categories-list__item {
+  position: relative;
+}
+
+.categories-list__link {
+  display: block;
+  padding-top: 160px;
+}
+
+.categories-list__link:hover::before {
+  background-color: rgb(240, 197, 46);
+}  
+
+.categories-list__link:active::after {
+  background-color: rgb(240, 197, 46);
+  opacity: 0.3;
+} 
+
+.categories-list__link:active p {
+  opacity: 0.3;
+}
+
+.categories-list__link::before {
+  content: "";
+  position: absolute;
+  top: 0;
+
+  width: 160px;
+  height: 160px;
+
+  background-color: rgb(247, 226, 150);
+}
+
+.categories-list__link::after {
+  content: "";
+  position: absolute;
+  top: 0;
+
+  width: 160px;
+  height: 160px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.categories-list__item:nth-child(1) a::after {
+  background-image: url("../img/popular-1.svg");
+}
+
+.categories-list__item:nth-child(2) a::after {
+  background-image: url("../img/popular-2.svg");
+  background-position: bottom;
+}
+
+.categories-list__item:nth-child(3) a::after {
+  background-image: url("../img/popular-3.svg");
+}
+
+.categories-list__item:nth-child(4) a::after {
+  background-image: url("../img/popular-4.svg");
+}
+
+.categories-list__item:nth-child(5) a::after {
+  background-image: url("../img/popular-5.svg");
+}
+
+.categories-list__item:nth-child(6) a::after {
+  background-image: url("../img/popular-6.svg");
 }
